Upgrade Html and Css file >> fix cards in works section and buttons

--- a/index.html
+++ b/index.html
@@ -64,97 +64,101 @@
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="./images/image_Plaholder.svg" alt="Project">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <a href="#"><button type="button">See Project</button></a>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="./images/image_Plaholder.svg" alt="Project">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button"><a href="#">See Project</a></button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./images/image_Plaholder.svg" alt="Project">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button"><a href="#">See Project</a></button>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="./images/image_Plaholder.svg" alt="Project">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button"><a href="#">See Project</a></button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./images/image_Plaholder.svg" alt="Project">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button"><a href="#">See Project</a></button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./images/image_Plaholder.svg" alt="Project">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button"><a href="#">See Project</a></button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
-        </div>
-
+            <div class="project-card">
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
+                </div>
+            </div>
     </section>
     <section id="about-section" class="about-section">
         <div class="section-title">
@@ -166,7 +170,7 @@
                 don’t hesitate to contact me.</p>
         </div>
         <div class="project-btn">
-            <button type="button"><a href="#">Get My Resume</a></button>
+            <a href="#">Get My Resume</a>
         </div>
     </section>
     <section class="about">
