Fix webhint errors

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <section id="about-section" class="about-section">
         <div class="section-title">
@@ -241,7 +242,9 @@
                     <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
                         class="form-control input4" id="Type_a_message"></textarea>
                 </div>
-                <button type="submit" class="btn-form input5"><a href="#">Get in touch</a></button>
+                <div class="project-btn">
+                    <a href="#">Get in touch</a>
+                </div>
             </form>
         </div>
     </section>
