--- a/index.html
+++ b/index.html
@@ -36,125 +36,130 @@
         </div>
         <ul class="icon-list">
             <li>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
+                <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-medium" aria-hidden="true"></i> </a>
+                <a href="https://medium.com/"><i class="fa fa-medium" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
+                <a href="https://angel.co/"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="./img/placeholder.png" alt="down-btn">
+            <img src="./images/down_btn.svg" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="./IMG/Indicator.png" alt="green line">
+            <img src="./img/Indicator.png" alt="green break line">
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="./img/Plaholder.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./img/Plaholder.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="./img/Plaholder.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./img/Plaholder.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./img/Plaholder.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+            </div>
+            <div class="project-card">
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
         </div>
-
     </section>
     <section id="about-section" class="about-section">
         <div class="section-title">
@@ -166,13 +171,13 @@
                 don’t hesitate to contact me.</p>
         </div>
         <div class="project-btn">
-            <button type="button">Get My Resume</button>
+            <a href="#">Get My Resume</a>
         </div>
     </section>
     <section class="about">
         <ul class="d-flex">
             <li class="tech-list">
-                <img src="./img/icon-languages.svg" alt="#">
+                <img src="./img/icon-languages.svg" alt="Language icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Language</h2>
                     <ul class="tec-btns">
@@ -184,7 +189,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./img/icon-frameworks.svg" alt="#">
+                <img src="./img/icon-frameworks.svg" alt="Frameworks icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Frameworks</h2>
                     <ul class="tec-btns">
@@ -197,7 +202,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./img/icon-skills.svg" alt="#">
+                <img src="./img/icon-skills.svg" alt="Skills icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Skills</h2>
                     <ul class="tec-btns">
@@ -217,15 +222,29 @@
             <h2 class="form-title">I'm always interested in hearing about new projects, so if you'd like to chat please
                 get in touch.</h2>
             <form action="https://formspree.io/f/xbjwrbyd" method="POST" class="message-form">
-                <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required
-                    class="form-control input1">
-                <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required
-                    class="form-control input2">
-                <input type="email" name="email" placeholder="Email" maxlength="30" required
-                    class="form-control input3">
-                <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
-                    class="form-control input4"></textarea>
-                <button type="submit" class="btn-form input5">Get in touch</button>
+                <div class="label_and_box">
+                    <label for="First_Name">Full Name</label>
+                    <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required
+                        class="form-control input1" id="First_Name">
+                </div>
+                <div class="label_and_box">
+                    <label for="Last_Name">Last Name</label>
+                    <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required
+                        class="form-control input2" id="Last_Name">
+                </div>
+                <div class="label_and_box">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" placeholder="Email" maxlength="30" required
+                        class="form-control input3" id="email">
+                </div>
+                <div class="label_and_box">
+                    <label for="Type_a_message">Type a message</label>
+                    <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
+                        class="form-control input4" id="Type_a_message"></textarea>
+                </div>
+                <div class="project-btn">
+                    <a href="#">Get in touch</a>
+                </div>
             </form>
         </div>
     </section>
@@ -233,19 +252,19 @@
     <footer>
         <ul class="icon-list">
             <li>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
+                <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-medium" aria-hidden="true"></i> </a>
+                <a href="https://medium.com/"><i class="fa fa-medium" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
+                <a href="https://angel.co/"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
         <h3 class="email-title"><a href="alberttheodore17@gmail.com">alberttheodore17@gmail.com</a></h3>
