Fix images in works section

--- a/index.html
+++ b/index.html
@@ -64,95 +64,102 @@
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="./images/Im_Plaholder2.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="./images/Im_Plaholder2.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./images/Im_Plaholder2.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="./images/Im_Plaholder2.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./images/Im_Plaholder2.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./images/Im_Plaholder2.png" alt="Project image">
-                <div class="card-title">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                </div>
-                <ul class="project-technologies">
-                    <li>Ruby on rails</li>
-                    <li>JavaScript</li>
-                    <li>css</li>
-                    <li>html</li>
-                </ul>
-                <div class="project-btn">
-                    <button type="button">See Project</button>
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="poject_card_info">
+                    <div class="card-title">
+                        <h4>Multi-Post Stories Gain+Glory</h4>
+                    </div>
+                    <ul class="project-technologies">
+                        <li>Ruby on rails</li>
+                        <li>JavaScript</li>
+                        <li>css</li>
+                        <li>html</li>
+                    </ul>
+                    <div class="project-btn">
+                        <a href="#">See Project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
     <section id="about-section" class="about-section">
