--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     <header>
         <h2 class="logo"><a href="#">Welcome</a></h2>
         <nav>
-            <i class="fa fa-bars mobile-nav" aria-hidden="true"></i>
-            <ul class="desk-nav">
+            <img src="./img/union.png" alt="menu icon" class="mobile-nav" id="hamburger">
+            <ul class="desk-nav collapse" id="scripticon">
+                <img src="./img/close-btn.png" alt="close button">
                 <li><a href="#portfolio-section">Portfolio</a></li>
                 <li><a href="#about-section">About</a></li>
                 <li><a href="#contact-section">Contact</a></li>
             </ul>
         </nav>
+        
     </header>
     <section id="portfolio-section" class="home-page">
         <div class="welcome-text">
@@ -303,6 +305,8 @@
 
 
     <script src="https://use.fontawesome.com/1226aa0088.js"></script>
+    <script src="script.js"></script>
 </body>
+
 
 </html>
