--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
         <h2 class="logo" id="logo2"><a href="#">Welcome</a></h2>
         <nav>
             <img src="./img/union.png" alt="menu icon" class="mobile-nav" id="hamburger">
-            <ul class="desk-nav collapse" id="scripticon">
+            <ul class="desk-nav" id="scripticon">
                <li id="display"><img src="./img/close-btn.png " alt="close button"></li>
                 <li><a href="#portfolio-section">Portfolio</a></li>
                 <li><a href="#about-section">About</a></li>
                 <li><a href="#contact-section">Contact</a></li>
             </ul>
-            
-        </nav>
+            </nav>
+            <div class="mob-menu collapse">
+                <i class="fa fa-times" aria-hidden="true"></i>
+                <ul class="menu-link">
+                   <li><a href="#portfolio-section" class="links">Portfolio</a></li>
+                   <li><a href="#about-section" class="links">About</a></li>
+                   <li><a href="#contact-section" class="links">Contact</a></li>
+               </ul>
+            </div>
          
     </header>
     <section id="portfolio-section" class="home-page">
