--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         </div>
         <div class="project-container">
-            <div class="project-card">
+            <div class="project-card">  
                 <div class="poject_card_info">
                     <div class="card-title">
                         <h4>Multi-Post Stories Gain+Glory</h4>
@@ -104,7 +104,7 @@
                         <li>html</li>
                     </ul>
                     <div class="project-btn">
-                        <a href="#">See Project</a>
+                        <button type="button" class="btn">See Project</button>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                         <li>html</li>
                     </ul>
                     <div class="project-btn">
-                        <a href="#">See Project</a>
+                        <button type="button" class="btn">See Project</button>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                         <li>html</li>
                     </ul>
                     <div class="project-btn">
-                        <a href="#">See Project</a>
+                        <button type="button" class="btn">See Project</button>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                         <li>html</li>
                     </ul>
                     <div class="project-btn">
-                        <a href="#">See Project</a>
+                        <button type="button" class="btn">See Project</button>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                         <li>html</li>
                     </ul>
                     <div class="project-btn">
-                        <a href="#">See Project</a>
+                        <button type="button" class="btn">See Project</button>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                         <li>html</li>
                     </ul>
                     <div class="project-btn">
-                        <a href="#">See Project</a>
+                        <button type="button" class="btn">See Project</button>
                     </div>
                 </div>
             </div>
@@ -315,6 +315,37 @@
     <script src="https://use.fontawesome.com/1226aa0088.js"></script>
     <script src="script.js"></script>
 </body>
-
+<section class="modal-container">
+    <article class="modal-content">
+        <div class="header">
+        <span id="closeModal"><i class="fa fa-times" id="modclose" aria-hidden="true"></i></span>
+        <img id="projectImage" src="img/modalimage.png" alt="sample project">
+        </div>
+        <ul class="md-wrapper mobile">
+            <li>Ruby on Rails</li>
+            <li>Css</li>
+            <li>Javascript</li>
+        </ul>
+        <div class="headbtn">
+        <h2>Keeping track of hundreds of components</h2>
+        <ul class="modalbtn desktop">
+            <li><a id="liveLink" href="#" target="_blank">See Live <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+            <li><a id="sourceCode" href="#" target="_blank">See Source <i class="fa fa-github" aria-hidden="true"></i></a></li>
+        </ul>
+        </div>
+        <ul class="md-wrapper desktop">
+            <li>Ruby on Rails</li>
+            <li>Css</li>
+            <li>Javascript</li>
+        </ul>
+        <p class="modal-text" id="projectDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the relea</p>
+        <div class="modalbtn mobile">
+            <a id="liveLink" href="#" target="_blank">See Live <i class="fa fa-external-link" aria-hidden="true"></i></a>
+            <a id="sourceCode" href="#" target="_blank">See Source <i class="fa fa-github" aria-hidden="true"></i></a>
+         </div>
+            </div>
+        </div>
+    </article>
+</section>
 
 </html>
