add functionality to form

--- a/index.html
+++ b/index.html
@@ -281,10 +281,9 @@
                     <label for="Type_a_message">Type a message</label>
                     <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
                         class="form-control input4" id="Type_a_message"></textarea>
+                         <small class="erro-msg"></small>
                 </div>
-                <div class="project-btn">
-                    <a href="#">Get in touch</a>
-                </div>
+                <button type="submit">Get In Touch</button>
             </form>
         </div>
     </section>
