--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <p class="aboutme">
         I can help you build a product , feature or website Look through some
         of my work and experience! If you like what you see and have a project
-        you need coded, don’t hestiate to contact me.
+        you need coded, don’t hesitate to contact me.
       </p>
       <a class="see_project" href="#">Get My Resume</a>
     </div>
@@ -185,7 +185,7 @@
           <a href="#"><img src="./images/angellist.svg" alt="angellist" /></a>
         </li>
       </ul>
-      <p>felemenoun@gmail.com</p>
+      <p>alberttheodore17@gmail.com</p>
     </div>
   </footer>
   <script src="script.js"></script>
