--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   <title>My Portfolio</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J16KK4QYVH"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JYHQ83P7C6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-J16KK4QYVH');
-  </script>
-
+  gtag('config', 'G-JYHQ83P7C6');
+</script>
 
 </head>
 
