--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
     <div class="whoiam">
 
-      <h1 class="name">Hey there. I'm Albert Theodore</h1>
+      
 
 
 
@@ -68,7 +68,7 @@
       <p>
         I can help you build a product , feature or website Look through some
         of my work and experience! If you like what you see and have a project
-        you need coded, don’t hestiate to contact me.
+        you need coded, don’t hesitate to contact me.
       </p>
     </div>
     <ul class="social_media_icons">
