--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet" />
-  <title>My Portfolio</title>
+  <title>My Portfolio site</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JYHQ83P7C6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JYHQ83P7C6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -21,9 +20,6 @@
 
   gtag('config', 'G-JYHQ83P7C6');
 </script>
-
-
-  
 
 </head>
 
@@ -55,20 +51,14 @@
       <a href="#contact-us">contact</a>
     </nav>
     <div class="whoiam">
-
-      
-
-
-
       <h1 class="name">Hey there. I'm Albert Theodore.</h1>
-
       <h2 class="job">I'm a software developer</h2>
     </div>
     <div class="aboutme abt_me">
       <p>
         I can help you build a product , feature or website Look through some
         of my work and experience! If you like what you see and have a project
-        you need coded, don’t hesitate to contact me.
+        you need coded, don’t hestiate to contact me.
       </p>
     </div>
     <ul class="social_media_icons">
@@ -157,7 +147,7 @@
   <footer id="contact-us" class="contact_form">
     <p class="send_me_msg">I'm always interested in hearing about new projects, so if you'd like to chat please get in
       touch.</p>
-    <form id="submit_form" action="https://formspree.io/f/xzbopjvn" method="POST">
+    <form id="submit_form" action="https://formspree.io/f/xbjwrbyd" method="POST">
       <ul class="form_items">
         <li><input class="box_Style input1" type="text" name="name" id="name" maxlength="30" placeholder="Full Name"
             required>
@@ -198,8 +188,8 @@
     </div>
   </footer>
   <script src="script.js"></script>
-
-  <script src="storage_data.js"></script>
+  <script src="validation.js"></script>
+  <script src="store_data.js"></script>
 </body>
 
 </html>
